test_suite/tests/ui/duplicate-attribute/two-rename-ser.stderr
error: duplicate serde attribute `rename`
 --> $DIR/two-rename-ser.rs:4:10
  |
4 | #[derive(Serialize)]
  |          ^^^^^^^^^

error: aborting due to previous error

